# 14-team-dojangkok-ai

./: .env.example  .gitignore  .python-version  Dockerfile  README.md  pyproject.toml  requirements.txt  ruff.toml  run_easy_contract_samples.py
.github/ISSUE_TEMPLATE/: ai-todo-template.md  qa_bug.md
.github/workflows/: ai-cd.yml  ai-ci.yml  ai-cicd.yml
app/: bootstrap.py  logging_config.py  main.py  settings.py
app/api/: deps.py
app/api/routers/: chat.py  checklist.py  easy_contract.py
app/api/schemas/: chat.py  checklist.py  easy_contract.py
app/core/: errors.py
app/resources/http/: client.py
app/resources/ocr/: upstage_client.py
app/resources/rabbitmq/: __init__.py  client.py  codec.py  result_publisher.py
app/resources/vectorstore/: __init__.py  chroma_store.py
app/resources/vllm/: client.py
app/services/: callback_service.py  cancel_registry.py  chat_service.py  checklist_service.py  easy_contract_service.py
app/utils/: error_messages.py  lease_contract_guard.py  pdf_images.py  pii_redaction.py  retry.py  upstage_html.py
app/workers/: __init__.py  mq_worker.py
app/workers/handlers/: __init__.py  checklist_handler.py  easy_contract_cancel_handler.py  easy_contract_handler.py
scripts/: ingest_corpus_to_chroma.py  seed_chat_demo_data.py  test_chat_sse.py
